2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Some cleanup
	This code is truly depressing, as soon as one wants to improve
	something, the impedance is so high that everything either falls
	apart, or require immediate care.  Believe it or not, I was
	working on error messages from the parser!
	* src/ucommand.cc, src/ucommand.hh, src/uconnection.cc,
	* src/uexpression.cc, src/ughostconnection.hh: Several
	changes I no longer feel like documenting, which is bad.
	Just as the code.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	uvar-common.cc
	* src/uvar.cc: Remove the code now in uvar-common.cc.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	Clean the scanner
	Now the scanner is tracking location accurately when
	there are C comments.
	* src/parser/bison/utoken.l (SET_VALP_STR, RETURN_STR_TOKEN)
	(RETURN_VAL_TOKEN, RETURN_NUM, RETURN_FLAG, RETURN_FLAGTIME)
	(RETURN_TIMEVALUE): New.
	Use them to factor and improve the code.
	(SC_C_COMMENT): New, use it to handle C comments.
	(EOL, BLANKS): New abbrev, use them.
	Put quotes around patterns, to improve readability and
	pretty-printing.
	As usual, remove useless braces and parens.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	UVar::invariant
	* src/uvar.cc: Implement it, and use it.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Formatting
	* src/uvalue.cc: here.
	And use case instead of if.

2006-12-05  Akim Demaille  <akim.demaille@free.fr>

	Kill more useless parens
	* src/console.cc,
	* src/ubinder.cc,
	* src/ucommand.cc,
	* src/ufunction.cc,
	* src/uobject.cc,
	* src/uqueue.cc,
	* src/ustring.cc,
	* src/ustring.hh,
	* src/uvalue.cc,
	* src/uvariable.cc: Remove useless parens.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	update externals
	* Makefile.am (ACLOCAL_AMFLAGS, SVN_EXTERNALS): Add sdk.

2006-12-05  Akim Demaille  <demaille@gostai.com>

	Simplify UBinder
	* src/ubinder.hh, src/ubinder.cc: Use C++ style ctors.
	(id): A UString, not a pointer.