@@ -1,3 +1,12 @@
+2006-12-07  Razik Yousfi  <yousfi@gostai.com>
+
+	Use ucopy in copy methods.
+	* src/uexpression.hh: Add new constructor.
+	* src/uexpression.cc,
+	* src/uvalue.cc,
+	* src/uvariablelist.cc: Use ucopy.
+	* vcs/local.rb: Add yousfi@gostai.com.
+
 2006-12-05  Akim Demaille  <akim.demaille@free.fr>
 
 	Some cleanup
